[tool.poetry]
name = "bnb"
version = "0.1.0"
description = ""
authors = ["Bram Vereertbrugghen <bram@adimian.com>"]

[tool.poetry.dependencies]
python = "^3.8"
questionary = "^1.5.2"
cson-to-markdown = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
